<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F8F8EE"
    tools:context=".Ui.LogInActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:background="@drawable/user_background"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logIn"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/_20sdp"
            android:textColor="@color/heatWhite"/>

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:src="@drawable/fooduct2"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="3dp" />

  <com.google.android.material.textfield.TextInputLayout
        style="@style/LoginStyel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:padding="@dimen/_10sdp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/LogInEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:minHeight="@dimen/_40sdp" />
    </com.google.android.material.textfield.TextInputLayout><com.google.android.material.textfield.TextInputLayout
        style="@style/LoginStyel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:padding="@dimen/_10sdp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/LogInPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:minHeight="@dimen/_40sdp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/Login_makeNewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NewAccount"
        android:layout_gravity="right"
        android:layout_margin="@dimen/_10sdp"
        android:textColor="#005AFF"/>
    <Button
        android:id="@+id/logIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/LogIn"
        android:textColor="#F8F8EE"
        />

</LinearLayout>