<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F8F8EE"
    tools:context=".Ui.RegisterActivity">

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/Reload"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="#FFF8F8EE"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/user_background"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signIn"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/_20sdp"
                android:textColor="@color/heatWhite"/>

            <ImageButton
                android:id="@+id/Register_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/heatYellow"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:layout_alignParentLeft="true"
                />

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:src="@drawable/fooduct2"
            tools:layout_editor_absoluteX="-16dp"
            tools:layout_editor_absoluteY="3dp" />




        <com.google.android.material.textfield.TextInputLayout
            style="@style/LoginStyel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userName"
            android:padding="@dimen/_10sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Register_UserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/_40sdp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/LoginStyel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:padding="@dimen/_10sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Register_PhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:minHeight="@dimen/_40sdp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/LoginStyel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:padding="@dimen/_10sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Register_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:minHeight="@dimen/_40sdp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/LoginStyel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:padding="@dimen/_10sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Register_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:minHeight="@dimen/_40sdp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/createNewAccount"
            android:textColor="#F8F8EE"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>